[gd_scene load_steps=5 format=3 uid="uid://b42rycpmnyq0k"]

[ext_resource type="Script" path="res://UI/splash_screen.gd" id="1_pis7t"]
[ext_resource type="Texture2D" uid="uid://dh5a77jt85f1h" path="res://UI/HackShack_FinalLogo_ForgePurple.png" id="2_rxysd"]
[ext_resource type="AudioStream" uid="uid://bkxos5asrvmne" path="res://Sounds/UISounds/splash_screen_audio.mp3" id="3_akxtr"]
[ext_resource type="FontFile" uid="uid://rerjonsav62n" path="res://Other/Fonts/Epyval.ttf" id="4_5dntk"]

[node name="splash_screen" type="Control" node_paths=PackedStringArray("logo_texture")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pis7t")
fade_in_time = 2.0
fade_out_time = 2.0
duration = 1.0
logo_texture = NodePath("logo_container/logo")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="logo_container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -450.0
offset_right = 450.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="logo" type="TextureRect" parent="logo_container"]
layout_mode = 2
texture = ExtResource("2_rxysd")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_akxtr")
volume_db = -8.432
autoplay = true
bus = &"Music"

[node name="lore_dump" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 841.0
offset_bottom = 230.0
theme_override_colors/default_color = Color(0, 0.945098, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_5dntk")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "> Foreign Planatery Body detected approximately 5 lightyears away.
> ATMOSPHERE COMPOSITION: null.
> LIFEFORM PRESENCE: null.
> Activating Autopilot Systems..."
visible_characters = 159

[node name="skip_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1642.0
offset_top = 969.0
offset_right = 1916.0
offset_bottom = 1079.0
theme_override_colors/font_disabled_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.623529, 0.247059, 0.909804, 1)
theme_override_colors/font_hover_color = Color(0.623529, 0.247059, 0.909804, 1)
theme_override_colors/font_pressed_color = Color(0.623529, 0.247059, 0.909804, 1)
theme_override_colors/font_focus_color = Color(0.623529, 0.247059, 0.909804, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("4_5dntk")
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "SKIP INTRO"

[connection signal="pressed" from="skip_button" to="." method="_on_skip_button_pressed"]
